--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: sans-serif;
+}
 #container {
     display: flex;
     flex-direction: column;
@@ -21,12 +24,15 @@
     background-color: aliceblue;
     margin-bottom: 20px;
     text-align: center;
-    font-size: xx-large;
+    font-size: 64px;
+
 }
 
 #first-part-of-the-story {
     padding: 20px;
-    background-color: palegreen;
+    background-color: aliceblue;
+    font-size: 20px;
+    text-align: center;
 
 }
 
