--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 
 #welcome-message {
     padding: 20px;
-    background-color: aliceblue;
+    background-color: #eae7ff;
     margin-bottom: 20px;
     text-align: center;
     font-size: 64px;
