--- a/style.css
+++ b/style.css
@@ -51,3 +51,25 @@ p {
     width: 100%;
     text-align: center;
 }
+
+
+/* torreon */
+
+.dears {
+    padding: 10px;
+    /*background-color: #eae7ff;*/
+    margin-top: 30px;
+    text-align: center;
+    font-size: 32px;
+    color: #009b00;
+
+}
+
+.dearsmessage {
+    padding: 20px;
+    /*background-color: aliceblue;*/
+    font-size: 20px;
+    text-align: center;
+    /*color: #008800;*/
+
+}
